# wisp

./: .gitignore  .gitignore.swp  1kGP_high_coverage_Illumina.chr20.filtered.SNV_INDEL_SV_phased_panel.vcf.gz.tbi  README.md  environment.yml  implementation_plan.md  mosdepth_alternative_method.md  pyproject.toml  sprite_test_data.sh
.github/workflows/: python_package.yml
docs/: about.rst  arguments.rst  changelog.rst  development.rst  examples.rst  index.rst  inputs.rst  output.rst
src/sprite_mask/: bedtools.py  cli.py  config.py  mosdepth.py  summaries.py  validation.py  vcf.py  workflow.py
tests/: test_bedtools.py  test_cli.py  test_quality.py  test_summaries.py  test_validation.py  test_vcf.py  test_workflow_commands.py  test_workflow_e2e.py  test_workflow_unit.py
tests/test_data/1000g_10sample_highcov_subset/: 1000g_10samples_highcov.chr20_10000000-10100000.vcf.gz.tbi  1000g_10samples_highcov.vcf.gz.tbi  README.md  sample_populations_and_sources.tsv  samples.list  samples.tsv  targets.bed
tests/test_data/1000g_10sample_highcov_subset/bams/: HG00096.bam  HG00096.bam.bai  HG00097.bam  HG00097.bam.bai  HG00099.bam  HG00099.bam.bai  HG00100.bam  HG00100.bam.bai  HG00101.bam  HG00101.bam.bai  NA18486.bam  NA18486.bam.bai  NA18489.bam  NA18489.bam.bai  NA18498.bam  NA18498.bam.bai  NA18499.bam  NA18499.bam.bai  NA18501.bam  NA18501.bam.bai
