[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-mask"
version = "0.1.0"
description = "Build sparse depth-threshold mask BEDs from BAM/CRAM cohorts with mosdepth and bedtools."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [
  { name = "sprite-mask contributors" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]
docs = [
  "sphinx>=7,<9",
  "sphinx-rtd-theme>=2,<4",
]

[project.scripts]
sprite = "sprite_mask.cli:main"
sprite-mask = "sprite_mask.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--capture=sys"

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
sqlite_cache = false
